@@ -1,5 +1,7 @@
 package com.epam.rd.autocode.assessment.appliances.service.impl;
 
+import com.epam.rd.autocode.assessment.appliances.dto.EmployeeDTO;
+import com.epam.rd.autocode.assessment.appliances.mapper.EmployeeDTOMapper;
 import com.epam.rd.autocode.assessment.appliances.model.Employee;
 import com.epam.rd.autocode.assessment.appliances.repository.EmployeeRepository;
 import com.epam.rd.autocode.assessment.appliances.service.EmployeeService;
@@ -8,12 +10,14 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class EmployeeServiceImpl implements EmployeeService {
 
     private final EmployeeRepository employeeRepository;
+    private final EmployeeDTOMapper employeeDTOMapper;
 
     @Override
     public Employee createEmployee(Employee employee) {
@@ -21,16 +25,18 @@ public class EmployeeServiceImpl implements EmployeeService {
     }
 
     @Override
-    public Employee getEmployeeById(Long id) {
+    public EmployeeDTO getEmployeeById(Long id) {
         return employeeRepository.findById(id)
+                .map(employeeDTOMapper)
                 .orElseThrow(() -> new RuntimeException("Employee not found"));
     }
 
     @Override
-    public List<Employee> getEmployees() {
-        return employeeRepository.findAll().stream()
-                .filter(user -> user instanceof Employee)
-                .toList();
+    public List<EmployeeDTO> getEmployees() {
+        return employeeRepository.findAll()
+                .stream()
+                .map(employeeDTOMapper)
+                .collect(Collectors.toList());
     }
 
     @Override
